# studypartner-ai

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  deploy.sh  pyproject.toml
.github/workflows/: ci.yml
src/studypartner/: __init__.py  cli.py  setup_wizard.py
src/studypartner/client/: __init__.py  adaptive.py  audio.py  capture.py  config.py  context.py  database.py  logging_config.py  nudge.py  preprocessor.py  profile.py  scheduler.py  session.py  ws_client.py
src/studypartner/os_integration/: __init__.py  focus_mode.py  menu_bar.py  notifications.py  platform.py  system_events.py
src/studypartner/server/: __init__.py  agent.py  live_session.py  main.py
src/studypartner/shared/: __init__.py  constants.py  models.py  study_guide.py
tests/: test_adaptive.py  test_context.py  test_study_guide.py
